# KARA_v0.0.1

./: ATTRIBUTIONS.txt  CMakeLists.txt  adventure14  kara  readme.md
data/: atlas.json  entities.json  map.data
src/: common.h  defs.h  main.c  structs.h
src/game/: bat.c  bat.h  blacksmith.c  blacksmith.h  chest.c  chest.h  door.c  door.h  dungeon.c  dungeon.h  dungeonMistress.c  dungeonMistress.h  ending.c  ending.h  entities.c  entities.h  entityFactory.c  entityFactory.h  fakeWall.c  fakeWall.h  fogOfWar.c  fogOfWar.h  goblin.c  goblin.h  gold.c  gold.h  hud.c  hud.h  inventory.c  inventory.h  item.c  item.h  map.c  map.h  merchant.c  merchant.h  messageBox.c  messageBox.h  player.c  player.h  (+14 more)
src/json/: cJSON.c  cJSON.h
src/system/: atlas.c  atlas.h  draw.c  draw.h  init.c  init.h  input.c  sound.c  sound.h  text.c  text.h  textures.c  textures.h  util.c  util.h
